--- a/style.css
+++ b/style.css
@@ -14,6 +14,27 @@
 html,
 body {
   font-family: "Open Sans", sans-serif;
+  color: white;
   height: 100%;
   background-color: var(--bg-color);
+}
+
+/* Title styles */
+.title {
+  width: 50%;
+  padding: 1%;
+  margin: 2% auto;
+  text-align: center;
+  font-size: 3rem;
+  border: 5px solid white;
+  border-radius: 25px;
+}
+.rock {
+  color: var(--rock);
+}
+.paper {
+  color: var(--paper);
+}
+.scissors {
+  color: var(--scissors);
 }
