--- a/style.css
+++ b/style.css
@@ -17,9 +17,15 @@ body {
   color: var(--bg-color);
   height: 100%;
   background-color: white;
-  min-height: 100vh;
+  max-width: 2100px;
+  margin: 0 auto;
+}
+body {
+  display: flex;
+  flex-direction: column;
 }
 main {
+  flex: 1 0 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,9 +36,9 @@ main {
 .title {
   width: 70%;
   padding: 1%;
-  margin: 2%;
   text-align: center;
   font-size: 3rem;
+  text-shadow: 0 0 2px var(--bg-color);
 }
 .rock {
   color: var(--rock);
@@ -51,9 +57,10 @@ main {
 .gameIcons {
   display: flex;
   justify-content: space-around;
+  width: 40%;
 }
 .gameIcon {
-  margin: 5%;
+  margin: 2% 5%;
   cursor: pointer;
   border: 5px solid;
   border-radius: 25px;
@@ -63,4 +70,49 @@ main {
 }
 .gameIcon:active {
   box-shadow: none;
+}
+/* computer move */
+.disabled {
+  visibility: hidden;
+}
+/* game controls */
+.gameControls {
+  font-size: 2rem;
+  font-weight: 600;
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+  margin: 1%;
+}
+.newGame {
+  cursor: pointer;
+  border: none;
+  color: white;
+  background-color: var(--bg-color);
+  padding: 1%;
+  font-size: 2rem;
+  font-weight: 900;
+  border-radius: 25px;
+  box-shadow: 0 0 0px;
+}
+.newGame:hover {
+  color: var(--rock);
+  box-shadow: 0 0 15px;
+}
+.newGame:active {
+  background-color: var(--rock);
+  color: var(--bg-color);
+}
+/* footer */
+.footer {
+  flex-shrink: 0;
+}
+.credits {
+  color: var(--bg-color);
+  text-decoration: none;
+  float: right;
+  font-weight: 400;
+}
+.credits:hover {
+  text-decoration: underline;
 }
